--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <!-- Joshua Snyder -->
-<!-- ASD 1302 -->
+<!-- ASD 1303 -->
 <!-- Project Week 1 -->
 
-<!DOCTYPE html>
 <html>
+
+
 	<head> 
+		
 		<title>Recipes!</title> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
@@ -16,14 +19,87 @@
 		<!-- Modernizr script -->
 		<!-- <script src="js/libs/modernizr.custom.min.js"></script> -->
 
-	</head> 
-	<body> 
+	</head>
+
+
+	<body>
+
+		<section id="home" data-role="page">
+			<header data-role="header" data-position="fixed">
+				<h1>Recipes!</h1>
+			</header>
+			<section data-role="content">
+				<h3>Categories:</h3>
+				<ul>
+					<li><p>American</p></li>
+					<li><p>Chinese</p></li>
+					<li><p>French</p></li>
+					<li><p>Japanese</p></li>
+					<li><p>Mexican</p></li>
+					<li><p>Seasonal</p></li>
+				</ul>
+			</section>
+			<footer data-role="footer" data-position="fixed">
+				<nav data-role="navbar">
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#add">Add</a></li>
+						<li><a href="#view">View</a></li>
+					</ul>
+				</nav>
+			</footer>
+		</section>
+
+		<section id="add" data-role="page">
+			<header data-role="header" data-position="fixed">
+				<h1>Add Recipe!</h1>
+			</header>
+			<section data-role="content">
+				<form action="#" method="" id="newRcpForm">
+					<fieldset>
+						<section>
+							
+						</section>
+					</fieldset>
+				</form>
+			</section>
+			<footer data-role="footer" data-position="fixed">
+				<nav data-role="navbar">
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#add">Add</a></li>
+						<li><a href="#view">View</a></li>
+					</ul>
+				</nav>
+			</footer>
+		</section>
+
+		<section id="view" data-role="page">
+			<header data-role="header" data-position="fixed">
+				<h1>My Recipes!</h1>
+			</header>
+			<section data-role="content">
+				
+			</section>
+			<footer data-role="footer" data-position="fixed">
+				<nav data-role="navbar">
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#add">Add</a></li>
+						<li><a href="#view">View</a></li>
+					</ul>
+				</nav>
+			</footer>
+		</section>
+
 
 		<!-- Javascript -->
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
-		<script type="text/javascript" src="js/sample-Main.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
+
+
 </html>
