--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<ul>
 					<li><p>American</p></li>
 					<li><p>Chinese</p></li>
-					<li><p>French</p></li>
+					<li><p>Italian</p></li>
 					<li><p>Japanese</p></li>
 					<li><p>Mexican</p></li>
 					<li><p>Seasonal</p></li>
@@ -57,8 +57,46 @@
 			<section data-role="content">
 				<form action="#" method="" id="newRcpForm">
 					<fieldset>
+						<div id="select">
+							<label for="selectChoice1" class="select">Categories:</label>
+							<select name="selectChoice1" id="selectChoice1">
+								<option value="" data-placeholder="true">Choose a Category:</option>
+								<option value="american">American</option>
+								<option value="chinese">Chinese</option>
+								<option value="italian">Italian</option>
+								<option value="japanese">Japanese</option>
+								<option value="mexican">Mexican</option>
+								<option value="seasonal">Seasonal</option>
+							</select>
+						</div>
 						<section>
-							
+							<div>
+								<label for="basicTxt">Recipe Name:</label>
+								<input type="text" name="name" id="rcpName" value="">
+							</div>
+							<div>
+								<label for="txtAreaA">Ingredients:</label>
+								<textarea name="txtAreaIngredients" id="txtAreaA" value=""></textarea>
+							</div>
+							<div>
+								<label for="txtAreaB">Directions:</label>
+								<textarea name="txtAreaDirections" id="txtAreaB" value=""></textarea>
+							</div>
+							<div>
+								<label for="slider">Rate It?:</label>
+								<input type="range" name="slider" id="slider" value="3" min="1" max="5">
+							</div>
+							<div data-role="fieldcontain">
+								<fieldset data-role="controlgroup">
+									<legend>Go To Meal?</legend>
+									<input type="checkbox" name="checkboxFav" id="checkboxFav">
+									<label for="checkboxFav">Yes</label>
+								</fieldset>
+							</div>
+							<section id="buttons">
+								<input type="submit" value="Add It!" id="addIt">
+								<input type="reset" value="Cancel" id="resetIt">
+							</section>
 						</section>
 					</fieldset>
 				</form>
@@ -79,7 +117,7 @@
 				<h1>My Recipes!</h1>
 			</header>
 			<section data-role="content">
-				
+				<input type="reset" value="Clear Recipes" id="resetAll">
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
