Added shell functions for the submit, reset, and clear buttons.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 			<section data-role="content">
 				<h3>Categories:</h3>
 				<ul>
-					<li><p>American</p></li>
-					<li><p>Chinese</p></li>
-					<li><p>Italian</p></li>
-					<li><p>Japanese</p></li>
-					<li><p>Mexican</p></li>
-					<li><p>Seasonal</p></li>
+					<li><a href="#"><p>American</p></a></li>
+					<li><a href="#"><p>Chinese</p></a></li>
+					<li><a href="#"><p>Italian</p></a></li>
+					<li><a href="#"><p>Japanese</p></a></li>
+					<li><a href="#"><p>Mexican</p></a></li>
+					<li><a href="#"><p>Seasonal</p></a></li>
 				</ul>
 			</section>
 			<footer data-role="footer" data-position="fixed">
@@ -105,7 +105,7 @@
 				<nav data-role="navbar">
 					<ul>
 						<li><a href="#home">Home</a></li>
-						<li><a href="#add">Add</a></li>
+						<li><a href="#edit">Edit</a></li>
 						<li><a href="#view">View</a></li>
 					</ul>
 				</nav>
