Edited the categories on the homepage to be links.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			<section data-role="content">
 				<h3>Categories:</h3>
 				<ul>
-					<li><p>American</p></li>
-					<li><p>Chinese</p></li>
-					<li><p>French</p></li>
-					<li><p>Italian</p></li>
-					<li><p>Japanese</p></li>
-					<li><p>Mexican</p></li>
-					<li><p>Seasonal</p></li>
+					<li><a href="#">American</a></li>
+					<li><a href="#">Chinese</a></li>
+					<li><a href="#">French</a></li>
+					<li><a href="#">Italian</a></li>
+					<li><a href="#">Japanese</a></li>
+					<li><a href="#">Mexican</a></li>
+					<li><a href="#">Seasonal</a></li>
 				</ul>
 			</section>
 			<footer data-role="footer" data-position="fixed">
