--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<!-- <script src="js/libs/modernizr.custom.min.js"></script> -->
 
 	</head>
+	<!-- END head -->
 
 
 	<body>
@@ -33,7 +34,6 @@
 				<ul>
 					<li><a href="#">American</a></li>
 					<li><a href="#">Chinese</a></li>
-					<li><a href="#">French</a></li>
 					<li><a href="#">Italian</a></li>
 					<li><a href="#">Japanese</a></li>
 					<li><a href="#">Mexican</a></li>
@@ -50,6 +50,7 @@
 				</nav>
 			</footer>
 		</section>
+		<!-- END page -->
 
 		<section id="add" data-role="page">
 			<header data-role="header" data-position="fixed">
@@ -113,6 +114,7 @@
 				</nav>
 			</footer>
 		</section>
+		<!-- END page -->
 
 		<section id="view" data-role="page">
 			<header data-role="header" data-position="fixed">
@@ -131,7 +133,7 @@
 				</nav>
 			</footer>
 		</section>
-
+		<!-- END page -->
 
 		<!-- Javascript -->
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -140,6 +142,6 @@
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
-
+	<!-- END body -->
 
 </html>
