Wrote js code that dynamically creates the page, and everything in it, for the American category.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			</header>
 			<section data-role="content">
 				<h3>Categories:</h3>
-				<ul>
-					<li><a href="#">American</a></li>
+				<ul data-role="listview">
+					<li><a href="#americanRcps" id="american">American</a></li>
 					<li><a href="#">Chinese</a></li>
 					<li><a href="#">Italian</a></li>
 					<li><a href="#">Japanese</a></li>
