--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/themes/purple.min.css">
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile.structure-1.2.0.min.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
 
 		<!-- Modernizr script -->
@@ -29,7 +29,7 @@
 			<header data-role="header" data-position="fixed">
 				<h1>Recipes!</h1>
 			</header>
-			<section data-role="content">
+			<div class="content" data-role="content">
 				<h3>Categories:</h3>
 				<ul data-role="listview">
 					<li><a href="#americanRcps" id="american">American</a></li>
@@ -39,7 +39,7 @@
 					<li><a href="#">Mexican</a></li>
 					<li><a href="#">Seasonal</a></li>
 				</ul>
-			</section>
+			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
@@ -136,8 +136,9 @@
 		<!-- END page -->
 
 		<!-- Javascript -->
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
