--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
 
 <html>
 
-
+	<!-- BEGIN head -->
 	<head> 
 		
-		<title>Recipes!</title> 
+		<!-- BEGIN meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta charset="utf-8">
+		<!-- END meta -->
 
-		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/themes/purple.min.css">
+		<title>Recipes!</title> 
+
+		<!-- BEGIN stylesheets -->
+		<!-- <link rel="stylesheet" href="css/themes/purple.min.css"> -->
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<!-- END stylesheets -->
 
 		<!-- Modernizr script -->
 		<!-- <script src="js/libs/modernizr.custom.min.js"></script> -->
@@ -22,9 +27,10 @@
 	</head>
 	<!-- END head -->
 
-
+	<!-- BEGIN body -->
 	<body>
 
+		<!-- BEGIN homepage -->
 		<section id="home" data-role="page">
 			<header data-role="header" data-position="fixed">
 				<h1>Recipes!</h1>
@@ -50,13 +56,15 @@
 				</nav>
 			</footer>
 		</section>
-		<!-- END page -->
+		<!-- END homepage -->
 
 		<section id="add" data-role="page">
 			<header data-role="header" data-position="fixed">
 				<h1>Add Recipe!</h1>
 			</header>
 			<section data-role="content">
+
+				<!-- BEGIN new recipe form -->
 				<form action="#" method="" id="newRcpForm">
 					<fieldset>
 						<section>
@@ -73,15 +81,13 @@
 							</select>
 						</div>
 						<section>
-							<div>
-								<label for="basicTxt">Recipe Name:</label>
+							<div id="txt-inputs">
+								<label for="rcpName">Recipe Name:</label>
 								<input type="text" name="name" id="rcpName" value="">
-							</div>
-							<div>
+
 								<label for="txtAreaA">Ingredients:</label>
 								<textarea name="txtAreaIngredients" id="txtAreaA" value=""></textarea>
-							</div>
-							<div>
+
 								<label for="txtAreaB">Directions:</label>
 								<textarea name="txtAreaDirections" id="txtAreaB" value=""></textarea>
 							</div>
@@ -98,11 +104,13 @@
 							</div>
 							<section id="buttons">
 								<input type="submit" value="Add It!" id="addIt">
-								<input type="reset" value="Cancel" id="resetIt">
+								<input type="submit" value="Cancel" id="cancelIt">
 							</section>
 						</section>
 					</fieldset>
 				</form>
+				<!-- END new recipe form -->
+			
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
@@ -121,7 +129,7 @@
 				<h1>My Recipes!</h1>
 			</header>
 			<section data-role="content">
-				<input type="reset" value="Clear Recipes" id="resetAll">
+				<input type="reset" value="Clear Recipes" id="clearAll">
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
@@ -136,9 +144,10 @@
 		<!-- END page -->
 
 		<!-- Javascript -->
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script>
 		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
