App saves to local storage.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		</section>
 		<!-- END homepage -->
 
+		<!-- BEGIN add page -->
 		<section id="add" data-role="page">
 			<header data-role="header" data-position="fixed">
 				<h1>Add Recipe!</h1>
@@ -85,11 +86,11 @@
 								<label for="rcpName">Recipe Name:</label>
 								<input type="text" name="name" id="rcpName" value="">
 
-								<label for="txtAreaA">Ingredients:</label>
-								<textarea name="txtAreaIngredients" id="txtAreaA" value=""></textarea>
+								<label for="txtArea-A">Ingredients:</label>
+								<textarea name="txtAreaIngredients" id="txtArea-A" value=""></textarea>
 
-								<label for="txtAreaB">Directions:</label>
-								<textarea name="txtAreaDirections" id="txtAreaB" value=""></textarea>
+								<label for="txtArea-B">Directions:</label>
+								<textarea name="txtAreaDirections" id="txtArea-B" value=""></textarea>
 							</div>
 							<div>
 								<label for="slider">Rate It?:</label>
@@ -147,7 +148,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-		<script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script>
+		<!-- <script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script> -->
 		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
