Local storage clears. Nearly done with retrieving and displaying data from local storage.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
 				<h1>My Recipes!</h1>
 			</header>
 			<section data-role="content">
-				<input type="reset" value="Clear Recipes" id="clearAll">
+			
 			</section>
+			<div>
+				<input type="reset" value="Clear Recipes" id="clearAll">
+			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
