--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<section>
 						<div id="select">
 							<label for="selectChoice1" class="select">Categories:</label>
-							<select name="selectChoice1" id="selectChoice1">
+							<select name="Category" id="selectChoice1">
 								<option value="" data-placeholder="true">Choose a Category:</option>
 								<option value="american">American</option>
 								<option value="chinese">Chinese</option>
@@ -84,22 +84,22 @@
 						<section>
 							<div id="txt-inputs">
 								<label for="rcpName">Recipe Name:</label>
-								<input type="text" name="name" id="rcpName" value="">
+								<input type="text" name="Recipe" id="rcpName" value="">
 
 								<label for="txtArea-A">Ingredients:</label>
-								<textarea name="txtAreaIngredients" id="txtArea-A" value=""></textarea>
+								<textarea name="Ingredients" id="txtArea-A" value=""></textarea>
 
 								<label for="txtArea-B">Directions:</label>
-								<textarea name="txtAreaDirections" id="txtArea-B" value=""></textarea>
+								<textarea name="Directions" id="txtArea-B" value=""></textarea>
 							</div>
 							<div>
 								<label for="slider">Rate It?:</label>
-								<input type="range" name="slider" id="slider" value="3" min="1" max="5">
+								<input type="range" name="Rating" id="slider" value="3" min="1" max="5">
 							</div>
 							<div data-role="fieldcontain">
 								<fieldset data-role="controlgroup">
 									<legend>Go To Meal?</legend>
-									<input type="checkbox" name="checkboxFav" id="checkboxFav">
+									<input type="checkbox" name="Favorite" id="checkboxFav">
 									<label for="checkboxFav">Yes</label>
 								</fieldset>
 							</div>
@@ -133,6 +133,7 @@
 			</section>
 			<div>
 				<input type="reset" value="Clear Recipes" id="clearAll">
+				<input type="submit" value="Autofill" id="autoFill">
 			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
