Refactored and implemented new get and display data code.

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 			<section data-role="content">
 
 				<!-- BEGIN new recipe form -->
-				<form action="#" method="" id="newRcpForm">
+				<form action="#" method="post" id="newRcpForm">
 					<fieldset>
 						<section>
 						<div id="select">
 							<label for="selectChoice1" class="select">Categories:</label>
 							<select name="Category" id="selectChoice1">
 								<option value="" data-placeholder="true">Choose a Category:</option>
-								<option value="american">American</option>
-								<option value="chinese">Chinese</option>
-								<option value="italian">Italian</option>
-								<option value="japanese">Japanese</option>
-								<option value="mexican">Mexican</option>
-								<option value="seasonal">Seasonal</option>
+								<option value="American">American</option>
+								<option value="Chinese">Chinese</option>
+								<option value="Italian">Italian</option>
+								<option value="Japanese">Japanese</option>
+								<option value="Mexican">Mexican</option>
+								<option value="Seasonal">Seasonal</option>
 							</select>
 						</div>
 						<section>
@@ -129,7 +129,7 @@
 			<header data-role="header" data-position="fixed">
 				<h1>My Recipes!</h1>
 			</header>
-			<section data-role="content">			
+			<section data-role="content">
 			</section>
 			<div>
 				<input type="reset" value="Clear Recipes" id="clearAll">
