Individual edit and delete links created, and functions nearly done.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							</div>
 							<section id="buttons">
 								<input type="submit" value="Add It!" id="addIt">
-								<input type="submit" value="Cancel" id="cancelIt">
+								<input type="reset" value="Cancel" id="cancelIt">
 							</section>
 						</section>
 					</fieldset>
