--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 					<li><a href="#">Seasonal</a></li>
 				</ul>
 			</div>
+			<section id="dataButtons">
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" class="json" value="JSON"></a>
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" class="xml" value="XML"></a>
+			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
