--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				</ul>
 			</div>
 			<section id="dataButtons">
-				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="JSON"></a>
-				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="XML"></a>
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="json"></a>
+				<a href="#"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml"></a>
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
