XML data gets retrieved and loaded to the view page. The way it is displayed needs to be tweaked.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<section id="dataButtons">
 				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="json"></a>
-				<a href="#"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml"></a>
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml"></a>
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
