--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<head> 
 		
 		<!-- BEGIN meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+		<meta charset="utf-8" />
 		<!-- END meta -->
 
 		<title>Recipes!</title> 
@@ -47,8 +47,8 @@
 				</ul>
 			</div>
 			<section id="dataButtons">
-				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="json"></a>
-				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml"></a>
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="json" /></a>
+				<a href="#view"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml" /></a>
 			</section>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
@@ -73,22 +73,23 @@
 				<form action="#" method="post" id="newRcpForm">
 					<fieldset>
 						<section>
-						<div id="select">
-							<label for="selectChoice1" class="select">Categories:</label>
-							<select name="Category" id="selectChoice1">
-								<option value="" data-placeholder="true">Choose a Category:</option>
-								<option value="American">American</option>
-								<option value="Chinese">Chinese</option>
-								<option value="Italian">Italian</option>
-								<option value="Japanese">Japanese</option>
-								<option value="Mexican">Mexican</option>
-								<option value="Seasonal">Seasonal</option>
-							</select>
-						</div>
+							<div id="select">
+								<label for="selectChoice1" class="select">Categories:</label>
+								<select name="Category" id="selectChoice1">
+									<option value="" data-placeholder="true">Choose a Category:</option>
+									<option value="American">American</option>
+									<option value="Chinese">Chinese</option>
+									<option value="Italian">Italian</option>
+									<option value="Japanese">Japanese</option>
+									<option value="Mexican">Mexican</option>
+									<option value="Seasonal">Seasonal</option>
+								</select>
+							</div>
+						</section>
 						<section>
 							<div id="txt-inputs">
 								<label for="rcpName">Recipe Name:</label>
-								<input type="text" name="Recipe" id="rcpName" value="">
+								<input type="text" name="Recipe" id="rcpName" value="" />
 
 								<label for="txtArea-A">Ingredients:</label>
 								<textarea name="Ingredients" id="txtArea-A" value=""></textarea>
@@ -98,18 +99,18 @@
 							</div>
 							<div>
 								<label for="slider">Rate It?:</label>
-								<input type="range" name="Rating" id="slider" value="3" min="1" max="5">
+								<input type="range" name="Rating" id="slider" value="3" min="1" max="5" />
 							</div>
 							<div data-role="fieldcontain">
 								<fieldset data-role="controlgroup">
 									<legend>Go To Meal?</legend>
-									<input type="checkbox" name="Favorite" id="checkboxFav">
+									<input type="checkbox" checked="unchecked" name="Favorite" id="checkboxFav" />
 									<label for="checkboxFav">Yes</label>
 								</fieldset>
 							</div>
 							<section id="buttons">
-								<input type="submit" value="Add It!" id="addIt">
-								<input type="reset" value="Cancel" id="cancelIt">
+								<input type="submit" value="Add It!" id="addIt" />
+								<input type="reset" value="Cancel" id="cancelIt" />
 							</section>
 						</section>
 					</fieldset>
@@ -136,8 +137,8 @@
 			<section data-role="content">
 			</section>
 			<div>
-				<input type="reset" value="Clear Recipes" id="clearAll">
-				<input type="submit" value="Autofill" id="autoFill">
+				<input type="reset" value="Clear Recipes" id="clearAll" />
+				<input type="submit" value="Autofill" id="autoFill" />
 			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
