--- a/asdcouch/app/_attachments/index.html
+++ b/asdcouch/app/_attachments/index.html
@@ -15,6 +15,10 @@
 
 		<title>Recipes!</title> 
 
+		<!-- BEGIN script -->
+			<script src="jquery.couch.js"></script>
+		<!-- END script -->
+
 		<!-- BEGIN stylesheets -->
 		<!-- <link rel="stylesheet" href="css/themes/purple.min.css"> -->
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
@@ -53,9 +57,9 @@
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
-						<li><a href="#home">Home</a></li>
-						<li><a href="#add">Add</a></li>
-						<li><a href="#view">View</a></li>
+						<li><a href="#home"data-icon="home">Home</a></li>
+						<li><a href="#add"data-icon="plus">Add</a></li>
+						<li><a href="#view"data-icon="view"data-icon="bars">View</a></li>
 					</ul>
 				</nav>
 			</footer>
@@ -109,8 +113,8 @@
 								</fieldset>
 							</div>
 							<section id="buttons">
-								<input type="submit" value="Add It!" id="addIt" />
-								<input type="reset" value="Cancel" id="cancelIt" />
+								<input type="submit" value="Add It!" id="addIt" data-icon="check" />
+								<input type="reset" value="Cancel" id="cancelIt" data-mini="true" data-icon="delete" />
 							</section>
 						</section>
 					</fieldset>
@@ -121,9 +125,9 @@
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
-						<li><a href="#home">Home</a></li>
-						<li><a href="#edit">Edit</a></li>
-						<li><a href="#view">View</a></li>
+						<li><a href="#home" data-icon="home">Home</a></li>
+						<li><a href="#edit" data-icon="edit">Edit</a></li>
+						<li><a href="#view" data-icon="bars">View</a></li>
 					</ul>
 				</nav>
 			</footer>
@@ -137,15 +141,15 @@
 			<section data-role="content">
 			</section>
 			<div>
-				<input type="reset" value="Clear Recipes" id="clearAll" />
+				<input type="reset" value="Clear Recipes" id="clearAll" data-mini=""true data-icon="delete" />
 				<input type="submit" value="Autofill" id="autoFill" />
 			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
-						<li><a href="#home">Home</a></li>
-						<li><a href="#add">Add</a></li>
-						<li><a href="#view">View</a></li>
+						<li><a href="#home" data-icon="home">Home</a></li>
+						<li><a href="#add" data-icon="plus">Add</a></li>
+						<li><a href="#view" data-icon="bars">View</a></li>
 					</ul>
 				</nav>
 			</footer>
