--- a/asdcouch/app/_attachments/index.html
+++ b/asdcouch/app/_attachments/index.html
@@ -15,13 +15,8 @@
 
 		<title>Recipes!</title> 
 
-		<!-- BEGIN script -->
-			<script src="jquery.couch.js"></script>
-		<!-- END script -->
-
 		<!-- BEGIN stylesheets -->
-		<!-- <link rel="stylesheet" href="css/themes/purple.min.css"> -->
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
 		<!-- <link rel="stylesheet" href="css/style.css" /> -->
 		<!-- END stylesheets -->
 
@@ -157,13 +152,13 @@
 		<!-- END page -->
 
 		<!-- Javascript -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-		<!-- <script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script> -->
-		<!-- <script type="text/javascript" src="js/libs/jquery.validate.min.js"></script> -->
-		<!-- <script type="text/javascript" src="js/json.js"></script> -->
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="js/libs/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.couch.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+		<!-- END Javascript -->
+		
 	</body>
 	<!-- END body -->
 
