--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<!-- BEGIN stylesheets -->
 		<!-- <link rel="stylesheet" href="css/themes/purple.min.css"> -->
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<!-- END stylesheets -->
 
@@ -154,13 +155,18 @@
 		<!-- END page -->
 
 		<!-- Javascript -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-		<!-- <script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script> -->
+		
+		<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+		<!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
+		<!-- <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script> -->
+		<script type="text/javascript" src="js/libs/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.mobile-1.3.0.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery.couch.js"></script>
 		<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+
+		<!-- END Javascript -->
 	</body>
 	<!-- END body -->
 
