Attempting to fix merge issue.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<!-- END homepage -->
 
 		<!-- START add page -->
-		<div data-role="page" id="home">
+		<div data-role="page" id="add">
 			
 			<!-- START header -->
 			<div data-role="header" data-postition="fixed">
