--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 					<a href="" data-role="button">Seasonal</a>
 				</div>
 				<!-- END div -->
-			
+				<div id="dataButtons">
+					<a href="#view"><input type="button" data-mini="true" data-inline="true" id="jsonData" value="json" /></a>
+					<a href="#view"><input type="button" data-mini="true" data-inline="true" id="xmlData" value="xml" /></a>
+					<a href="#view"><input type="button" data-mini="true" data-inline="true" id="phpData" value="PHP" /></a>
+				</div>
+
 			</section>
 			<!-- END section -->
 
