Edit function just about finished. Need option select, and checkbox fields to repopulate on edit.

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 					<!-- END div -->
 					<div>
 						<label for="ingredients">Recipe Ingredients:</label>
-						<textarea name="ingredients"></textarea>
+						<textarea name="ingredients" id="textArea-1"></textarea>
 						<label for="directions">Cooking Directions:</label>
-						<textarea name="directions"></textarea>
+						<textarea name="directions" id="textArea-2"></textarea>
 					</div>
 					<label for="rating">Rating:</label>
-					<input type="range" name="rating" id="slider" min="1" max="5" value="3" />
+					<input type="range" name="rating" id="slider" min="1" max="5" value="" />
 					<label>
 						<input type="checkbox" data-icon="check" name="favorite">Go-To Meal</input>
 					</label>
