--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 				<form action="#" method="post" id="add_Form">
 					<!-- START div -->
 					<div>
-						<label for="Category" class="select">Category:</label>
-						<select name="Category" id="select-choice">
+						<label for="Category">Category:</label>
+						<select name="Category" class="select" id="select-choice">
 							<option value="">Choose a Category</option>
 							<option value="American">American</option>
 							<option value="Chinese">Chinese</option>
@@ -192,7 +192,7 @@
 					<label for="Rating">Rating:</label>
 					<input type="range" name="Rating" id="slider" min="1" max="5" value="3" />
 					<label>
-						<input type="checkbox" id="checkBox" data-icon="check" name="Favorite">Go-To Meal</input>
+						<input type="checkbox" class="checkbox" id="checkBox" data-icon="check" name="Favorite">Go-To Meal</input>
 					</label>
 					<!-- START div -->
 					<div data-class="button_Div">
