if else statement for checkbox now looks for Yes or on.

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 					<!-- START div -->
 					<div>
 						<label for="category" class="select">Category:</label>
-						<select name="category" id="select-choice">
+						<select name="Category" id="select-choice">
 							<option value="">Choose a Category</option>
-							<option value="american">American</option>
-							<option value="chinese">Chinese</option>
-							<option value="italian">Italian</option>
-							<option value="japanese">Japanese</option>
-							<option value="mexican">Mexican</option>
-							<option value="seasonal">Seasonal</option>
+							<option value="American">American</option>
+							<option value="Chinese">Chinese</option>
+							<option value="Italian">Italian</option>
+							<option value="Japanese">Japanese</option>
+							<option value="Mexican">Mexican</option>
+							<option value="Seasonal">Seasonal</option>
 						</select>
 					</div>
 					<!-- END div -->
