--- a/asdcouch/app/_attachments/index.html
+++ b/asdcouch/app/_attachments/index.html
@@ -36,13 +36,13 @@
 			</header>
 			<div class="content" data-role="content">
 				<h3>Categories:</h3>
-				<ul data-role="listview">
-					<li><a href="#americanRcps" id="american">American</a></li>
-					<li><a href="#">Chinese</a></li>
-					<li><a href="#">Italian</a></li>
-					<li><a href="#">Japanese</a></li>
-					<li><a href="#">Mexican</a></li>
-					<li><a href="#">Seasonal</a></li>
+				<ul data-role="listview" id="homeList">
+					<li><a href="#view" id="american">American</a></li>
+					<li><a href="#view" id="chinese">Chinese</a></li>
+					<li><a href="#view" id="italian">Italian</a></li>
+					<li><a href="#view" id="japanese">Japanese</a></li>
+					<li><a href="#view" id="mexican">Mexican</a></li>
+					<li><a href="#view" id="seasonal">Seasonal</a></li>
 				</ul>
 			</div>
 			<section id="dataButtons">
@@ -54,7 +54,7 @@
 					<ul>
 						<li><a href="#home"data-icon="home">Home</a></li>
 						<li><a href="#add"data-icon="plus">Add</a></li>
-						<li><a href="#view"data-icon="view"data-icon="bars">View</a></li>
+						<li><a href="#view"data-icon="bars">View</a></li>
 					</ul>
 				</nav>
 			</footer>
@@ -134,6 +134,8 @@
 				<h1>My Recipes!</h1>
 			</header>
 			<section data-role="content">
+				<div data-role="listview" id="viewList">
+				</div>
 			</section>
 			<div>
 				<input type="reset" value="Clear Recipes" id="clearAll" data-mini=""true data-icon="delete" />
