--- a/asdcouch/app/_attachments/recipe.html
+++ b/asdcouch/app/_attachments/recipe.html
@@ -23,14 +23,14 @@
 				<h1>Recipe Details!</h1>
 			</header>
 			<div class="content" data-role="content">
-				<ul data-role="listview" id="detailsList">
+				<ul id="detailsList">
 				</ul>
 			</div>
 			<footer data-role="footer" data-position="fixed">
 				<nav data-role="navbar">
 					<ul>
 						<li><a href="#home"data-icon="home">Home</a></li>
-						<li><a href="#add"data-icon="plus">Edit</a></li>
+						<li><a href="#add"data-icon="plus" id="editItem">Edit</a></li>
 						<li><a href="#"data-icon="bars" id="deleteItem">Delete</a></li>
 					</ul>
 				</nav>
